--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <body>
     <video class="w-100" controls autoplay loop>
       <source
-        src="images/SPIDER ESDRAS.mp4"
+        src="images/VIDEOAITANACAN.mp4"
         type="video/mp4"
       />
     </video>
@@ -161,7 +161,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <div class="col-12" style="margin-top: 30px;">
-      <h2 class="prueba01">CONFIRMACIÓN DE ASISTENCIA</h2>
+      <p class="prueba01">CONFIRMACIÓN DE ASISTENCIA</p>
       <div class="container text-center mt-3">
         <a href="https://forms.gle/p75vpsXZicrvx7yH9"
         class="btn btn-custom2">
